fdo#76298: sw: do not start up every OLE object on deletion

First check if it's actually a Chart embedded object; starting up
external processes on Windows for arbitrary OLEs is likely expensive.

(regression from 1ba29be90f7141077f2d079d40dffc2efd4f1a2c)

Change-Id: I3c64444b6cf4d4f791cafc77ec1f9b2b0150ad1b