sw/source/core/ole/ndole.cxx
@@ -328,7 +328,6 @@ bool SwOLENode::SavePersistentData()
             if ( xChild.is() )
                 xChild->setParent( 0 );
 
-            // pCnt->RemoveEmbeddedObject( aOLEObj.aName, sal_False );
             /*
               #i119941
               When cut or move the chart, SwUndoFlyBase::DelFly will call SaveSection
@@ -336,7 +335,8 @@ bool SwOLENode::SavePersistentData()
               will be called. And chart filter will call chart core functions to create
               the chart again. Then chart core function will call the class
               ExplicitCategoryProvider to create data source. In this step, when SW data
-              source provider create the data source, it will create a new SwFlyFrm.
+              source provider create the data source, an UnoActionRemoveContext
+              will mess with the layout and create a new SwFlyFrm.
               But later in SwUndoFlyBase::DelFly, it will clear anchor related attributes
               of SwFlyFrm. Then finally null pointer occur.
               Resolution:
@@ -344,18 +344,18 @@ bool SwOLENode::SavePersistentData()
               only remove the object from the object container, without removing it's
               storage and graphic stream. The chart already removed from formatter.
             */
-            bool bChartWithInternalProvider = false;
+            bool bKeepObjectToTempStorage = true;
             uno::Reference < embed::XEmbeddedObject > xIP = GetOLEObj().GetOleRef();
-            if ( svt::EmbeddedObjectRef::TryRunningState( xIP ) )
+            if (IsChart() && !sChartTblName.isEmpty()
+                && svt::EmbeddedObjectRef::TryRunningState(xIP))
             {
                 uno::Reference< chart2::XChartDocument > xChart( xIP->getComponent(), UNO_QUERY );
-                if ( xChart.is() && xChart->hasInternalDataProvider() )
-                    bChartWithInternalProvider = true;
+                if (xChart.is() && !xChart->hasInternalDataProvider())
+                {
+                    bKeepObjectToTempStorage = false;
+                }
             }
 
-            const bool bKeepObjectToTempStorage = !IsChart() ||
-                                                  sChartTblName.isEmpty() ||
-                                                  bChartWithInternalProvider;
             pCnt->RemoveEmbeddedObject( aOLEObj.aName, false, bKeepObjectToTempStorage );
             // modify end
 
